discussion/kv_engine/131181/131181_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'mad-hatter'

* mad-hatter:
  MB-40052 [3/3]: Account for Backfills in initializingQ on destruction
  MB-40052 [2/3]: Introduce BackfillTrackingIface
  MB-40052 [1/3]: Decouple BackfillManager and EvpEngine

Change-Id: I9e8834fb23d26c96762b9e4723fe7e32cc737417

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-06-23 11:15:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-23 11:44:44.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28722/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0000/0158]: expiry pager settings.....\kv_engine\engines\ep\tests\ep_testsuite.cc:699 Test failed: `" (Expected `0", got `-1" - Updated time incorrect, expect: 03:00, actual: 02:59)
(7162 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28722/ )

Failure of a CTest test 234/393 Test #229: ep_testsuite.full_eviction.comp_passive ....................................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28722/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2911/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_dcp_backfill_mgr.h:30:37: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
        : BackfillManager(*theEngine.getKVBucket(),
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/connmap.h:36:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_dcp_backfill_mgr.h:31:36: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
                          theEngine.getDcpConnMap(),
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/connmap.h:36:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_dcp_backfill_mgr.h:32:36: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
                          theEngine.getConfiguration()) {
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/connmap.h:36:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2911/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_dcp_backfill_mgr.h:30:37:
error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2911/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3386/ : FAILURE

Failure of a CTest test [2020-06-23T11:35:15.213Z] 253/407 Test #318: memcached_testapp.default.TransportProtocols/ErrmapTest ...........................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3386/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24735/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4418/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12158/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4280/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
